axum-macros/tests/debug_handler/fail/not_send.stderr
error: future cannot be sent between threads safely
 --> tests/debug_handler/fail/not_send.rs:4:1
  |
4 | / async fn handler() {
5 | |     let rc = std::rc::Rc::new(());
6 | |     async {}.await;
7 | | }
  | |_^ future returned by `handler` is not `Send`
  |
  = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
 --> tests/debug_handler/fail/not_send.rs:6:13
  |
5 |     let rc = std::rc::Rc::new(());
  |         -- has type `Rc<()>` which is not `Send`
6 |     async {}.await;
  |             ^^^^^^ await occurs here, with `rc` maybe used later
7 | }
  | - `rc` is later dropped here
note: required by a bound in `debug_handler_check_future`
 --> tests/debug_handler/fail/not_send.rs:4:1
  |
4 | / async fn handler() {
5 | |     let rc = std::rc::Rc::new(());
6 | |     async {}.await;
7 | | }
  | |_^ required by this bound in `debug_handler_check_future`
